--- a/SmartUsersService/build.gradle
+++ b/SmartUsersService/build.gradle
@@ -41,11 +41,18 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web"){
     	exclude group: 'org.springframework.security', module: 'org.springframework.security'
     }
+    compile group: 'org.springframework', name: 'spring-context-support', version: '5.2.2.RELEASE'
+    
 	compile("org.springframework.security:spring-security-web:3.2.6.RELEASE")
 	compile("org.springframework.security:spring-security-config:3.2.6.RELEASE")
 	compile group: 'org.springframework.security', name: 'spring-security-core', version: '3.2.6.RELEASE'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.2.4.RELEASE'
 	compile("org.springframework:spring-support:2.0.6")
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.2.5.RELEASE'
+	// https://mvnrepository.com/artifact/javax.mail/javax.mail-api
+	compile group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
+	
 	//compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '8.0.20'
 	compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '8.5.15'
 	//compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.3.0.RELEASE'
