--- a/SmartUsersService/src/main/resources/application.yml
+++ b/SmartUsersService/src/main/resources/application.yml
@@ -57,11 +57,28 @@ smtp:
   host: smtp.gmail.com
   username: jbdatapoint@gmail.com
   password: juned@123
-  port: 587
+  port: 465 #587
   sender: SmartSoft
+  
+  spring:
+    mail:
+      default-encoding: UTF-8
+      host: smtp.gmail.com
+      username: jbdatapoint@gmail.com
+      password: juned@123
+      port: 465 #587
+      properties:
+       mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+      protocol: smtp
+      test-connection: false
+  
 #
 script:
-  #path: D:\\FB\\bti2.sql
+ 
   path:  E:\\HCM by Juned\\CODE BACK UP\\userDb\\smartuser.sql
   accesspath: http://localhost:8082
   accessfinancialpath: http://localhost:8085
@@ -78,3 +95,5 @@ dbpath:
 
  #for Windows
   mysqlpath: 'C:\wamp64\bin\mysql\mysql5.7.14\bin\mysql'
+  
+  
